Mobile menu has several issues, especially on Firefox #272

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -1333,15 +1333,17 @@ textarea
     {
         position           : fixed;
         height             : 100%;
-        width              : auto;
-        top                : 0;
+        width              : 70%;
+        /*top                : 0;*/
         left               : 0;
         background-color   : #F1EEEF;
         overflow           : hidden;
-        margin-top         : 50px;
+        /*margin-top         : 50px;*/
 
         -webkit-transform  : translate(-100%, 0);
         -webkit-transition : all 1s ease;
+        transition : all 1s ease;
+        transform  : translate(-100%, 0);
     }
 
     /*.navbar-main.navbar .container{*/
@@ -1361,6 +1363,7 @@ textarea
     .slidingContent
     {
         -webkit-transition : all 1s ease;
+        transition : all 1s ease;
     }
 
     .navButtonIconStyle b
@@ -1372,6 +1375,7 @@ textarea
     .notransition
     {
         -webkit-transition : none;
+        transition : none;
     }
 
     .navbar-main.navbar h2
@@ -1420,6 +1424,7 @@ textarea
     border-top                 : 1px solid transparent;
     box-shadow                 : inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling : touch;
+    overflow-scrolling : touch;
 }
 
 .navbar-collapse2:before,
@@ -1577,10 +1582,12 @@ textarea
     from
     {
         -webkit-transform : rotate(0deg);
+        transform : rotate(0deg);
     }
     to
     {
         -webkit-transform : rotate(360deg);
+        transform : rotate(360deg);
     }
 }
 
